# flower-ai-mcu

./: .gitignore  LICENSE  README.md
esp/: .clangd  CMakeLists.txt  Makefile
esp/main/: CMakeLists.txt  har_dataset.h  linker.lf  main.c  network.h  network_esp.c  network_linux.c  testserver.c  train.c  train.h  util.c  util.h  wifi_credentials.example.h
esp/main/proto/msg/: example.pb.c  example.pb.h  node.pb.c  node.pb.h  recorddict.pb.c  recorddict.pb.h  task.pb.c  task.pb.h  transport.pb.c  transport.pb.h
flower/: pyproject.toml
flower/quickstart_numpy/: client_app.py  server_app.py
test/: tmux.sh
